--- a/componentes/nav-funcionario-trp.html
+++ b/componentes/nav-funcionario-trp.html
@@ -3,6 +3,10 @@
     <img class="no-select brand-logo logo-navbar-verde" src="{root_path}assets/img/logo-verde.svg">
     <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
+      <li><a class="waves-effect" href="{root_path}funcionario/">
+        Página inicial
+        <i class="material-icons right">home</i>
+      </a></li>
       <li><a class="waves-effect" href="cardapio/criar">
         Criar cardápio
         <i class="material-icons right">menu_book</i>
@@ -18,6 +22,10 @@
 
 <ul class="sidenav" id="mobile-sidenav">
   <li class="sidenav__logo"><img src="{root_path}assets/img/logo-verde.svg"></li>
+  <li><a class="waves-effect" href="{root_path}funcionario/">
+    Página inicial
+    <i class="material-icons right">home</i>
+  </a></li>
   <li><a class="waves-effect" href="cardapio/criar">
     Criar cardápio
     <i class="material-icons right">menu_book</i>
